+ Subo MAPA v0.0 (solo anda la Q para salir). + Agrego configuraciones de los proyectos (commons y gui). + Hay un instructivo en PROC_MAPA

--- a/PROC_ENTRANDOR/.project
+++ b/PROC_ENTRANDOR/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PROC_ENTRANDOR</name>
+	<name>PROC_ENTRENADOR</name>
 	<comment></comment>
 	<projects>
 	</projects>
