+ Mapa valida movimientos de entrenadores dentro de los margenes + Mapa crea Entrenadores (todavia hardcodeado) + Mapa valida pokenest no separadas por al menos 2 posiciones + Mapa valida pokenest dentro de los margenes + Mapa crea Pokenest  (todavia hardcodeado)

--- a/PROC_MAPA/.cproject
+++ b/PROC_MAPA/.cproject
@@ -39,9 +39,7 @@
 									<listOptionValue builtIn="false" value="ncurses"/>
 									<listOptionValue builtIn="false" value="nivel-gui"/>
 								</option>
-								<option id="gnu.c.link.option.paths.343248845" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="/home/utnso/so-nivel-gui-library/nivel-gui"/>
-								</option>
+								<option id="gnu.c.link.option.paths.343248845" name="Library search path (-L)" superClass="gnu.c.link.option.paths" valueType="libPaths"/>
 								<option id="gnu.c.link.option.shared.1625991595" name="Shared (-shared)" superClass="gnu.c.link.option.shared" value="false" valueType="boolean"/>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.686385119" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
