chicos ahi cree la shared library. Para que ande abran la terminal y pongan

--- a/PROC_MAPA/.project
+++ b/PROC_MAPA/.project
@@ -3,6 +3,7 @@
 	<name>PROC_MAPA</name>
 	<comment></comment>
 	<projects>
+		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
