--- a/PROC_ENTRENADOR/.project
+++ b/PROC_ENTRENADOR/.project
@@ -3,6 +3,7 @@
 	<name>PROC_ENTRENADOR</name>
 	<comment></comment>
 	<projects>
+		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
