--- a/PROC_POKEDEX_SERVIDOR/.project
+++ b/PROC_POKEDEX_SERVIDOR/.project
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PROC_POKEDEX</name>
+	<name>PROC_POKEDEX_SERVIDOR</name>
 	<comment></comment>
 	<projects>
-		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
