bueno ahi esta la shared library adentro deje las instrucciones para que les ande bien y deje echa la parte de sockets de la parte de pokedex servidor y cliente

--- a/PROC_POKEDEX_SERVIDOR/.project
+++ b/PROC_POKEDEX_SERVIDOR/.project
@@ -3,6 +3,7 @@
 	<name>PROC_POKEDEX_SERVIDOR</name>
 	<comment></comment>
 	<projects>
+		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
