--- a/PROC_POKEDEX_CLIENTE/.project
+++ b/PROC_POKEDEX_CLIENTE/.project
@@ -3,6 +3,7 @@
 	<name>PROC_POKEDEX_CLIENTE</name>
 	<comment></comment>
 	<projects>
+		<project>libTeamRocket</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
