--- a/PROC_MAPA/.cproject
+++ b/PROC_MAPA/.cproject
@@ -38,6 +38,7 @@
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1906076415" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug">
 								<option id="gnu.c.link.option.libs.1249010349" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="nivel-gui"/>
+									<listOptionValue builtIn="false" value="pkmn-battle"/>
 									<listOptionValue builtIn="false" value="libTeamRocket"/>
 									<listOptionValue builtIn="false" value="commons"/>
 									<listOptionValue builtIn="false" value="pthread"/>
