--- a/PROC_MAPA/Debug/makefile
+++ b/PROC_MAPA/Debug/makefile
@@ -27,7 +27,7 @@ endif
 all: mapa
 
 dependents:
-	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) all
+	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) clean all
 
 # Tool invocations
 mapa: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so
