ahi subo las implementaciones de sockets de: getattr,readattr,read. Implemento el tema de los strings seguidos utilizando un centinela. lee cada palabra hasta el centinela (en este caso %) y la guarda en un char * y ahi faltaria ver el manejo del mismo

--- a/PROC_MAPA/Debug/makefile
+++ b/PROC_MAPA/Debug/makefile
@@ -27,7 +27,7 @@ endif
 all: mapa
 
 dependents:
-	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) clean all
+	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) all
 
 # Tool invocations
 mapa: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so
