--- a/PROC_POKEDEX_CLIENTE/Debug/makefile
+++ b/PROC_POKEDEX_CLIENTE/Debug/makefile
@@ -27,7 +27,7 @@ endif
 all: PROC_POKEDEX_CLIENTE
 
 dependents:
-	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) clean all
+	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) all
 
 # Tool invocations
 PROC_POKEDEX_CLIENTE: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so
