Logs en Servidor y levanto archivo de configuracion

--- a/PROC_POKEDEX_SERVIDOR/.cproject
+++ b/PROC_POKEDEX_SERVIDOR/.cproject
@@ -39,6 +39,7 @@
 								<option id="gnu.c.link.option.libs.971617180" name="Libraries (-l)" superClass="gnu.c.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="libTeamRocket"/>
 									<listOptionValue builtIn="false" value="pthread"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="commons"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.1242240352" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
