avances del poke servidor

--- a/PROC_POKEDEX_SERVIDOR/.cproject
+++ b/PROC_POKEDEX_SERVIDOR/.cproject
@@ -69,6 +69,7 @@
 						<entry flags="RESOLVED" kind="libraryFile" name="libTeamRocket" srcPrefixMapping="" srcRootPath=""/>
 					</externalSetting>
 				</externalSettings>
+				<externalSettings containerId="OSADA_FS;" factoryId="org.eclipse.cdt.core.cfg.export.settings.sipplier"/>
 			</storageModule>
 		</cconfiguration>
 		<cconfiguration id="cdt.managedbuild.config.gnu.exe.release.1344189448">
