--- a/PROC_POKEDEX_SERVIDOR/.project
+++ b/PROC_POKEDEX_SERVIDOR/.project
@@ -4,6 +4,7 @@
 	<comment></comment>
 	<projects>
 		<project>libTeamRocket</project>
+		<project>OSADA_FS</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
