+ funciona readDir, getAtr (con comunicacion poke server y cliente) + tambien esta andando read (hardcodeado) para README.txt
Nota: Se utilizo el disco challenge.bin para las pruebas, se reviso que
leyera directorios vacios, que le devuelva el size de un archivo,
devuelva tanto directorios como archivos. 

Nota2: Hay que reestructurar el read del OSADA.

Nota3: Hice un link a los archivos de OSADA_FS, para poder compilar el
pokedex_server, en un futuro se puede unificar para evitar
inconvenientes.

Nota4: Queda pendiente aprolijar un poco el codigo, validar
desconexiones, crear multiples hilos en poke_server, etc.

--- a/PROC_POKEDEX_SERVIDOR/.cproject
+++ b/PROC_POKEDEX_SERVIDOR/.cproject
@@ -30,6 +30,9 @@
 								<option id="gnu.c.compiler.option.include.paths.2030443957" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/libTeamRocket}&quot;"/>
 								</option>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.1127036481" superClass="gnu.c.compiler.option.preprocessor.def.symbols" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="_FILE_OFFSET_BITS=64"/>
+								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1066351021" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.linker.exe.debug.1063266625" name="GCC C Linker" superClass="cdt.managedbuild.tool.gnu.c.linker.exe.debug">
