--- a/PROC_POKEDEX_SERVIDOR/Debug/makefile
+++ b/PROC_POKEDEX_SERVIDOR/Debug/makefile
@@ -8,6 +8,7 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include src/osada_src/subdir.mk
 -include src/lib/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
@@ -27,14 +28,14 @@ endif
 all: PROC_POKEDEX_SERVIDOR
 
 dependents:
-	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) all
-	-cd /home/utnso/workspace/tp-2016-2c-Team-Rocket/OSADA_FS/Debug && $(MAKE) all
+	-cd /home/utnso/git/tp-2016-2c-Team-Rocket/libTeamRocket/Debug && $(MAKE) all
+	-cd /home/utnso/git/tp-2016-2c-Team-Rocket/OSADA_FS/Debug && $(MAKE) all
 
 # Tool invocations
-PROC_POKEDEX_SERVIDOR: $(OBJS) $(USER_OBJS) /home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so /home/utnso/workspace/tp-2016-2c-Team-Rocket/OSADA_FS/Debug/OSADA_FS
+PROC_POKEDEX_SERVIDOR: $(OBJS) $(USER_OBJS) /home/utnso/git/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so /home/utnso/git/tp-2016-2c-Team-Rocket/OSADA_FS/Debug/OSADA_FS
 	@echo 'Building target: $@'
 	@echo 'Invoking: GCC C Linker'
-	gcc -L"/home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug" -o "PROC_POKEDEX_SERVIDOR" $(OBJS) $(USER_OBJS) $(LIBS)
+	gcc -L"/home/utnso/git/tp-2016-2c-Team-Rocket/libTeamRocket/Debug" -o "PROC_POKEDEX_SERVIDOR" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -45,7 +46,7 @@ clean:
 
 .PHONY: all clean dependents
 .SECONDARY:
-/home/utnso/workspace/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so:
-/home/utnso/workspace/tp-2016-2c-Team-Rocket/OSADA_FS/Debug/OSADA_FS:
+/home/utnso/git/tp-2016-2c-Team-Rocket/libTeamRocket/Debug/liblibTeamRocket.so:
+/home/utnso/git/tp-2016-2c-Team-Rocket/OSADA_FS/Debug/OSADA_FS:
 
 -include ../makefile.targets
